@@ -1,3 +1,7 @@
+2009-03-27 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Framework/PCProject.m: save windows placements to a separate file with the username as name
+
 2009-03-24 Sergii Stoian <stoyan255@gmail.com>
 
 	* Framework/PCProjectBuilder.m: Add some comments
